<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的安卓之路</string>
    <string name="edit_message">请输入文本</string>
    <string name="button_send">发送</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">主视图</string>
    <string name="title_activity_display_message">我的消息</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_collection_demo">CollectionDemoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pager">pager</string>
    <string name="fav_color">请选择一个你喜欢的颜色</string>
    <string name="blue_label">蓝色</string>
    <string name="red_label">红色</string>
    <string name="yellow_label">黄色</string>
    <string name="hobby">爱好</string>
    <string name="hobby_basketball">篮球</string>
    <string name="hobby_football">足球</string>
    <string name="hobby_sing">唱歌</string>
    <string name="title_activity_backup_restore">BackupRestoreActivity</string>
    <string name="backupRestoreActivity">启动BackupRestoreActivity</string>
    <string name="title_activity_contact_manager">联系人管理</string>
    <string name="contactManageActivity">启动contactManageActivity</string>
    <string name="show_invisible">显示不可见的联系人</string>
    <string name="add_contact">添加联系人</string>
    <string name="showPDF">显示PDF</string>
    <string name="showImage">显示图片</string>
    <string name="showFlv">播放视频</string>
    <string name="title_activity_play_video">PlayVideoActivity</string>

</resources>