<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.fitark.helloworld.BackupRestoreActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_color" />

    <RadioGroup
        android:id="@+id/fav_color_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/fav_blue"
            android:text="@string/blue_label" />

        <RadioButton
            android:id="@+id/fav_yellow"
            android:text="@string/yellow_label" />

        <RadioButton
            android:id="@+id/fav_red"
            android:text="@string/red_label" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby" />

    <CheckBox
        android:id="@+id/hobby_basketball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_basketball" />

    <CheckBox
        android:id="@+id/hobby_football"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_football" />

    <CheckBox
        android:id="@+id/hobby_sing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_sing" />

    <TextView
        android:id="@+id/result_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>