<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_message" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/backupRestoreAcitvity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startBackupRestoreActivity"
        android:text="@string/backupRestoreActivity" />
     <Button
        android:id="@+id/contactManageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactManageActivity" />
     <Button
        android:id="@+id/showPDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showPDF" />
     <Button
        android:id="@+id/showImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showImage" />  

</LinearLayout>